--- a/landingpage.html
+++ b/landingpage.html
@@ -34,7 +34,7 @@
 				<a class="btn btn-outline-info toggle" href="index.html">Portfolio</a>
 			</li>
 	      	<li class="ml-2 nav-item dropdown">
-				<a class="btn btn-outline-info toggle" href="support.html">FAQ&Prices</a>
+				<a class="btn btn-outline-info toggle" href="faq.html">FAQ&Prices</a>
 				
 			</li>	      
 	      	<li class="ml-2 nav-item dropdown">
@@ -53,11 +53,14 @@
 		
 <div class="section2 text-white"><h1>Jumel Tagnipez</h1>
 	<h4>Full-stack Web Developer<hr>
+	<a href="index.html">
+	
 	<button type="button" class="btn btn-outline-info btn-lg animate bounceIn">View Portfolio</button></h4>
+	</a>
 </div>
 <hr>
 
-<footer id="contact" class="footer" class="col">
+<div id="contact" class="footer-main" class="col">
 		<a href="mailto:jumelonline01@gmail.com"><small>jumeltagnipez |Email</small></a>
 		<a href="#left"></a>
 		<div class="socmed">
@@ -66,7 +69,7 @@
 		<a href="https://www.instagram.com"> <img src="assets/images/instagram.jpg" alt="social-instagram"></a>
 		<a href="https://www.youtube.com"> <img src="assets/images/youtube.jpg" alt="social-youtube"></a>
 		</div> 
-</footer>
+</div>
 </div> <!-- landing -->
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
