--- a/photography.html
+++ b/photography.html
@@ -33,7 +33,7 @@
 				<a class="btn btn-outline-info toggle" href="index.html">Portfolio</a>
 			</li>
 	      	<li class="ml-2 nav-item dropdown">
-				<a class="btn btn-outline-info toggle" href="support.html">FAQ&Prices</a>
+				<a class="btn btn-outline-info toggle" href="faq.html">FAQ&Prices</a>
 				
 			</li>	      
 	      	<li class="ml-2 nav-item dropdown">
@@ -44,35 +44,46 @@
     </div>
   	</div>		
 </nav>
-
+<div class="photography">
 			
-<div>
+<div class="text-white">
 	<h1>PHOTOGRAPHY</h1><br>
 </div>
 
 <div class="container-fluid">
 <div class="row"> 
 	<div class="col-md-6">
-		  <a href="landingpage.html"><img src="assets/images/portraits.jpg" class="img-fluid" alt="photo-1"></a>
+		<div class="row">
+		  <a href="assets/images/wedding000.png"><img src="assets/images/wedding000.png" id="" class="img-fluid" alt="photo-1"></a>
+		</div>
 	</div>
-	<div class="col-md-6">		  
-		  <a href="landingpage.html"><img src="assets/images/travels.jpg" class="img-fluid" alt="photo-2"></a>
+	<div class="col-md-6">	
+		<div class="row">  
+		  <a href="https://youtu.be/yu9Ucp-OReQ"><img src="assets/images/cinema.gif" class="img-fluid" alt="photo-2"></a>
+		</div>	
 	</div>
+</div>
+<div class="row">
 	<div class="col-md-12">
-		  <a href="landingpage.html"><img src="assets/images/travel3.jpg" class="img-fluid" alt="photo-3"></a>
+		<div class="row">
+		  <a href="assets/images/wedding003.jpg"><img src="assets/images/wedding003.jpg" id="" class="img-fluid" alt="photo-3"></a>
+		</div>
 	</div>
 </div>
 <div class="row"> 
 	<div class="col-md-6">
-		  <a href="landingpage.html"><img src="assets/images/portraits.jpg" class="img-fluid" alt="photo-1"></a>
+		<div class="row">
+		  <a href="assets/images/wedding001.jpg"><img src="assets/images/wedding001.jpg" id="" class="img-fluid" alt="photo-4"></a>
+		</div>
 	</div>
-	<div class="col-md-6">		  
-		  <a href="landingpage.html"><img src="assets/images/travels.jpg" class="img-fluid" alt="photo-2"></a>
-	</div>
-	<div class="col-md-12">
-		  <a href="landingpage.html"><img src="assets/images/travel3.jpg" class="img-fluid" alt="photo-3"></a>
+	<div class="col-md-6">	
+		<div class="row">  
+		  <a href="assets/images/wedding002.jpg"><img src="assets/images/wedding002.jpg" id="" class="img-fluid" alt="photo-5"></a>
+		</div>	
 	</div>
 </div>
+
+
 </div> <!-- container fluid -->
 
 
