--- a/travels.html
+++ b/travels.html
@@ -33,7 +33,7 @@
 				<a class="btn btn-outline-info toggle" href="index.html">Portfolio</a>
 			</li>
 	      	<li class="ml-2 nav-item dropdown">
-				<a class="btn btn-outline-info toggle" href="support.html">FAQ&Prices</a>
+				<a class="btn btn-outline-info toggle" href="faq.html">FAQ&Prices</a>
 				
 			</li>	      
 	      	<li class="ml-2 nav-item dropdown">
@@ -44,35 +44,45 @@
     </div>
   	</div>		
 </nav>
-
+<div class="travels">
 			
-<div>
+<div class="text-white">
 	<h1>TRAVELS</h1><br>
 </div>
 
 <div class="container-fluid">
 <div class="row"> 
 	<div class="col-md-6">
-		  <a href="landingpage.html"><img src="assets/images/portraits.jpg" class="img-fluid" alt="photo-1"></a>
+		<div class="row">
+		  <a href="assets/images/paris000.jpg"><img src="assets/images/paris000.jpg" id="" class="img-fluid" alt="travel-1"></a>
+		</div>
 	</div>
-	<div class="col-md-6">		  
-		  <a href="landingpage.html"><img src="assets/images/travels.jpg" class="img-fluid" alt="photo-2"></a>
+	<div class="col-md-6">	
+		<div class="row">  
+		  <a href="https://www.youtube.com/watch?v=O3RBDDTYJg4"><img src="assets/images/paris.gif" class="img-fluid" alt="travel-2"></a>
+		</div>	
 	</div>
+</div>
+<div class="row">
 	<div class="col-md-12">
-		  <a href="landingpage.html"><img src="assets/images/travel3.jpg" class="img-fluid" alt="photo-3"></a>
+		<div class="row">
+		  <a href="assets/images/paris001.jpg"><img src="assets/images/paris001.jpg" id="" class="img-fluid" alt="travel-3"></a>
+		</div>
 	</div>
 </div>
 <div class="row"> 
 	<div class="col-md-6">
-		  <a href="landingpage.html"><img src="assets/images/portraits.jpg" class="img-fluid" alt="photo-1"></a>
+		<div class="row">
+		  <a href="assets/images/paris002.jpg"><img src="assets/images/paris002.jpg" id="" class="img-fluid" alt="travel-4"></a>
+		</div>
 	</div>
-	<div class="col-md-6">		  
-		  <a href="landingpage.html"><img src="assets/images/travels.jpg" class="img-fluid" alt="photo-2"></a>
-	</div>
-	<div class="col-md-12">
-		  <a href="landingpage.html"><img src="assets/images/travel3.jpg" class="img-fluid" alt="photo-3"></a>
+	<div class="col-md-6">	
+		<div class="row">  
+		  <a href="assets/images/paris003.jpg"><img src="assets/images/paris003.jpg" id="" class="img-fluid" alt="travel-5"></a>
+		</div>	
 	</div>
 </div>
+
 </div> <!-- container fluid -->
 
 
@@ -91,6 +101,6 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 	<script src="assets/js/bootstrap.min.js"></script>
-</div> <!-- photography -->
+</div> <!-- travels -->
 </body>
 </html>
