--- a/support.html
+++ b/support.html
@@ -62,7 +62,7 @@
 		  <h3>JUMEL TAGNIPEZ</h3>
 		  <a><img src="assets/images/profile.jpg" alt="portfolio-1"></a>
 		
-		  <p class="lead text-primary">Photographer and Full-stack Web Developer.</p>
+		  <p class="lead text-primary">A Full-stack Web Developer and a photographer.</p>
 		
 		</div>
 	</div>
@@ -82,7 +82,7 @@
 		  <h3 class="display-5">ANGELO BRONOLA</h3>
 		  <a><img src="assets/images/profile3.jpg" alt="portfolio-1"></a>
 		
-		  <p class="lead text-primary">Videographer and a traveler.</p>
+		  <p class="lead text-primary">A traveler and a videographer by profession.</p>
 		
 		</div>
 	</div>
