--- a/landingpage.html
+++ b/landingpage.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-	<title>Lens and Travels</title>
+	<title>Click</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css"> 
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 	<!-- font awesome -->
@@ -20,8 +20,8 @@
 <nav class="navbar navbar-dark bg-opacity sticky-top" class="row">
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-    	<a  id="head" class="navbar-brand text-white"><img src="assets/images/shoot.png" height="30px" width="30px">Click</a>
-      <span class="navbar-toggler-icon"></span>
+    <a class="navbar-brand text-white"><img src="assets/images/shoot2.png" height="30px" width="30px">Click</a>
+    <span class="navbar-toggler-icon"></span>
     </button>
     	
   	<div class="collapse navbar-collapse" id="navbarToggleExternalContent">
@@ -30,8 +30,13 @@
 		    <li class="ml-2 nav-item active">
 		        <a class="btn btn-outline-info toggle" href="landingpage.html">Home</a>		        
 		    </li>
-		    <li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="index.html">Portfolio</a>
+	      	<li class="ml-2 nav-item dropdown">
+				<button class="btn btn-outline-info dropdown-toggle" data-toggle="dropdown">Services</button>
+				<div class="dropdown-menu" style="max-width: 70px;">
+					<a style="background-color: rgb(0, 225, 250);" class="dropdown-item" href="photography.html">PhotoAlbum</a>
+					<a style="background-color: rgb(0, 225, 250);" class="dropdown-item" href="tutorials.html">Tutorials</a>
+					<a style="background-color: rgb(0, 225, 250);" class="dropdown-item" href="travels.html">Travels</a>
+				</div>
 			</li>
 	      	<li class="ml-2 nav-item dropdown">
 				<a class="btn btn-outline-info toggle" href="faq.html">FAQ&Prices</a>
@@ -43,26 +48,29 @@
 			</li>      
 	    </ul>
     </div>
-  	</div>
-		
+  	</div>		
 </nav>
 
 <div class="section1">
-<img src="assets/images/click.png" height="400px" width="360">
-</div><hr>
+<img src="assets/images/click.png" height="410px" width="360">
+</div>
 		
-<div class="section2 text-white"><h1>Jumel Tagnipez</h1>
-	<h4>Full-stack Web Developer<hr>
-	<a href="index.html">
-	
-	<button type="button" class="btn btn-outline-info btn-lg animate bounceIn">View Portfolio</button></h4>
+<div class="section2 text-white"><h1>Click</h1>
+	<h4>Services Limited<hr>
+	<a href="index.html">	
+	<button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Click Here</button></h4>
 	</a>
 </div>
-<hr>
+<hr class="my-1">
 
-<div id="contact" class="footer-main" class="col">
+<audio autoplay loop>
+    <source src="assets/sound.ogg">
+    <source src="assets/sound.mp3"> 
+</audio>
+
+<div class="footer-main">
 		<a href="mailto:jumelonline01@gmail.com"><small>jumeltagnipez |Email</small></a>
-		<a href="#left"></a>
+		
 		<div class="socmed">
 		<a href="https://www.facebook.com"> <img src="assets/images/facebook.jpg" alt="social-facebook"></a>
 		<a href="https://www.twitter.com"> <img src="assets/images/twitter.jpg" alt="social-twitter"></a>
