--- a/photography.html
+++ b/photography.html
@@ -125,7 +125,7 @@
 <div class="row">
 	<div class="col-md-12">
 		<div class="row">
-		  <h1 id="tutorials" class="display-4 testi text-black">TUTORIALS for BEGINNERS<br class="display-1"> 
+		  <h1 id="tutorials" class="display-4 testi text-black">TUTORIALS<br class="display-1"> 
 		  	<span>Designed for anyone who wants to take better photos and learn some basic camera controls:<br class="display-4">
 1. Learn how to take amazing photos that will impress your family and friends.<br>
 2. Learn how the works, so you can take better photos using manual settings.<br>
