--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
 				
 <div class="row">
 	<div class="about"> 
-		<img src="file:///Users/admin/Documents/jumeltagnipez/capstone1/assets/images/profile.jpg" class="profile">
+		<img src="assets/images/profile.jpg" class="profile">
 		<h1>Jumel D. Tagnipez</h1>
 		<h2> <em>Full-Stack Web Developer</em> </h2>
 
