--- a/portfolio.html
+++ b/portfolio.html
@@ -37,14 +37,14 @@
 		        <a class="btn btn-outline-info toggle" href="portfolio.html">Home</a>		        
 		    </li>
 		    <li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="portfolio">Portfolio</a>
+				<a class="btn btn-outline-info toggle" href="#portfolio">Portfolio</a>
 			</li>
 	      	<li class="ml-2 nav-item dropdown">
 				<a class="btn btn-outline-info toggle" href="portfolio.html">About</a>
 				
 			</li>	      
 	      	<li class="ml-2 nav-item dropdown">
-				<a class="btn btn-outline-info toggle" href="us">Contact</a>				
+				<a class="btn btn-outline-info toggle" href="#us">Contact</a>				
 			</li>      
 	    </ul>
     </div>
