--- a/travels.html
+++ b/travels.html
@@ -35,21 +35,14 @@
 		    <li class="ml-2 nav-item active">
 		        <a class="btn btn-outline-info toggle" href="landingpage.html">Home</a>		        
 		    </li>
-	      	<li class="ml-2 nav-item dropdown">
-				<button class="btn btn-outline-info dropdown-toggle" data-toggle="dropdown">Services</button>
-				<div class="dropdown-menu" style="max-width: 70px;">
-					<a style="background-color: rgb(0, 225, 250);" class="dropdown-item" href="photography.html">PhotoAlbum</a>
-					<a style="background-color: rgb(0, 225, 250);" class="dropdown-item" href="photography.html#tutorials">Tutorials</a>
-					<a style="background-color: rgb(0, 225, 250);" class="dropdown-item" href="travels.html">Travels</a>
-				</div>
-			</li>
-	      	<li class="ml-2 nav-item dropdown">
-				<a class="btn btn-outline-info toggle" href="index.html#faq">FAQ&Prices</a>
-				
+	      	<li class="ml-2 nav-item active">
+				<a class="btn btn-outline-info toggle" href="index.html">Services</a>				
+			</li> 
+	      	<li class="ml-2 nav-item active">
+				<a class="btn btn-outline-info toggle" href="index.html#faq">FAQ&Prices</a>				
 			</li>	      
-	      	<li class="ml-2 nav-item dropdown">
-				<a class="btn btn-outline-info toggle" href="index.html#support">Contact</a>
-				
+	      	<li class="ml-2 nav-item active">
+				<a class="btn btn-outline-info toggle" href="index.html#support">Contact</a>				
 			</li>      
 	    </ul>
     </div>
@@ -136,7 +129,8 @@
 </audio>
 
 <div class="footer-main">
-		<a href="mailto:jumelonline01@gmail.com"><small>jumeltagnipez |Email</small></a>
+		<a href="https://jumeltagnipez.github.io/capstone1/portfolio.html"><small>jumeltagnipez|</small></a>
+		<a href="mailto:jumelonline01@gmail.com"><small>Email</small></a>
 		
 		<div class="socmed">
 		<a href="https://www.facebook.com"> <img src="assets/images/facebook.jpg" alt="social-facebook"></a>
