--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		  
 		  <a href="photography.html#tutorials"><img src="assets/images/lightroom.gif" alt="portfolio-2"></a>
 		
-		  <p class="lead text-primary">Free basic photography tutorials for the first ten reservations every month.</p>
+		  <p class="lead text-primary">Free basic photography tutorials for the first ten reservations every month (every 1st Sunday AM only).</p>
 		
 		</div>
 	</div>
@@ -304,9 +304,8 @@ For out of Town Fees please refer to Travel Packages Section.
 <del>Paris,France: PHP100,000</del><ins>Not Available for now</ins><br>
 HK City Tour: PHP14,900<br>
         <strong>Local :</strong><br>
-Romblon: PHP 3,500<br>
-Bohol: PHP6,900<br>
 Cebu: PHP3,900<br>
+Romblon: PHP 3,500<br>
 Baguio: PHP1,500
         </div>
       </div>
