--- a/photography.html
+++ b/photography.html
@@ -50,7 +50,14 @@
   	</div>		
 </nav>
 
+<!--<div class="row">
+	<div class="col-md-12">
+		<div class="row">
+		  <h1 class="display-1 testp"><a href="#portfolio"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">View My Portfolio</button></a></h1>
 
+		</div>
+	</div>
+</div><hr class="my-5">-->
 			
 
 <div class="container-fluid">
@@ -58,15 +65,21 @@
 <div class="row">
 	<div class="col-md-12">
 		<div class="row">
-		  <h1 class="display-3 test text-black">PHOTO ALBUM</h1>
+		  <h1 class="display-3 test"> <a href="#wedding">PHOTO ALBUM</a></h1>
 		</div>
 	</div>
 </div><hr class="my-5">
-<h3 class="display-5 text-white">WEDDING EVENT</h3>
+
+<audio autoplay loop>
+    <source src="assets/withasmile.ogg">
+    <source src="assets/withasmile.mp3"> 
+</audio>
+
+<h3 class="display-5 text-white" id="wedding">WEDDING EVENT</h3>
 <div class="row"> 
 	<div class="col-md-6">
 		<div class="row">
-		  <a href="assets/images/wedding000.png"><img src="assets/images/wedding000.png" id="" class="img-fluid" alt="photo-1"></a>
+		  <a href="assets/images/wedding000.png"><img src="assets/images/wedding000.png" class="img-fluid" alt="photo-1"></a>
 		</div>
 	</div>
 	<div class="col-md-6">	
@@ -118,7 +131,16 @@
 <div class="row">
 	<div class="col-md-12">
 		<div class="row">
-		  <h1 id="tutorials" class="display-4 testi text-black">TUTORIALS<br class="display-1"> 
+		  <h1 class="display-1 testp"><a href="index.html"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Go to Main Page</button></a></h1>
+
+		</div>
+	</div>
+</div><hr class="my-5">
+
+<div class="row">
+	<div class="col-md-12">
+		<div class="row">
+		  <h1 id="tutorials" class="display-4 testi"> <a href="#pic">TUTORIALS</a><br class="display-1"> 
 		  	<span>Designed for anyone who wants to take better photos and learn some basic camera controls:<br class="display-4">
 1. Learn how to take amazing photos that will impress your family and friends.<br>
 2. Learn how the works, so you can take better photos using manual settings.<br>
@@ -129,12 +151,12 @@
 </div><hr class="my-5">
 
 <div class="text-white">
-	<h1>PORTRAIT</h1><br class="display-5">
+	<h1 id="pic">PORTRAIT</h1><br class="display-5">
 </div>
 <div class="row">
 	<div class="col-md-6">
 		<div class="row">
-		 <a href="assets/images/portraits2.jpg"><img src="assets/images/portraits2.jpg" id="" class="img-fluid" alt="tutor-1"></a>
+		 <a href="assets/images/portraits2.jpg"><img src="assets/images/portraits2.jpg" class="img-fluid" alt="tutor-1"></a>
 		</div>
 	</div>
 	<div class="col-md-6">	
@@ -175,11 +197,6 @@
 </div>
 
 </div> <!-- container fluid -->
-
-<audio autoplay loop>
-    <source src="assets/withasmile.ogg">
-    <source src="assets/withasmile.mp3"> 
-</audio>
 
 <div class="footer-main">
 		<a href="https://jumeltagnipez.github.io/capstone1/portfolio.html"><small>jumeltagnipez|</small></a>
