--- a/travels.html
+++ b/travels.html
@@ -55,12 +55,17 @@
 <div class="row">
 	<div class="col-md-12">
 		<div class="row">
-		  <h1 class="display-3 testing text-white">TRAVELS & TOURS</h1>
+		  <h1 class="display-3 testing"><a href="#paris">TRAVELS & TOURS</a></h1>
 		</div>
 	</div>
-</div><hr class="my-5">	
+</div><hr class="my-5">
 
-<div class="text-white">
+<audio autoplay loop>
+    <source src="assets/withasmile.ogg">
+    <source src="assets/withasmile.mp3"> 
+</audio>	
+
+<div class="text-white" id="paris">
 	<h1>PARIS,FRANCE PACKAGE </h1><br>
 </div>
 
@@ -119,14 +124,99 @@
 		  <a href="assets/images/hk004.jpg"><img src="assets/images/hk004.jpg" id="" class="img-fluid" alt="travel-4"></a>
 		</div>	
 	</div>
+</div><hr class="my-5">
+
+<div class="text-white">
+	<h1>CEBU PACKAGE</h1><br>
+</div>
+
+<div class="row"> 
+	<div class="col-md-6">
+		<div class="row">
+		  <a href="assets/images/cebu1.jpg"><img src="assets/images/cebu1.jpg" id="" class="img-fluid" alt="travel-1"></a>
+		</div>
+	</div>
+	<div class="col-md-6">	
+		<div class="row">  
+		  <a href="assets/images/cebu2.jpg"><img src="assets/images/cebu2.jpg" class="img-fluid" alt="travel-2"></a>
+		</div>	
+	</div>
+</div>
+
+<div class="row"> 
+	<div class="col-md-6">
+		<div class="row">
+		  <a href="assets/images/cebu3.jpg"><img src="assets/images/cebu3.jpg" id="" class="img-fluid" alt="travel-3"></a>
+		</div>
+	</div>
+	<div class="col-md-6">	
+		<div class="row">  
+		  <a href="assets/images/cebu4.jpg"><img src="assets/images/cebu4.jpg" id="" class="img-fluid" alt="travel-4"></a>
+		</div>	
+	</div>
+</div><hr class="my-5">
+
+<div class="text-white">
+	<h1>ROMBLON PACKAGE</h1><br>
+</div>
+
+<div class="row"> 
+	<div class="col-md-6">
+		<div class="row">
+		  <a href="assets/images/romblon1.jpg"><img src="assets/images/romblon1.jpg" id="" class="img-fluid" alt="travel-1"></a>
+		</div>
+	</div>
+	<div class="col-md-6">	
+		<div class="row">  
+		  <a href="assets/images/romblon2.jpg"><img src="assets/images/romblon2.jpg" class="img-fluid" alt="travel-2"></a>
+		</div>	
+	</div>
+</div>
+
+<div class="row"> 
+	<div class="col-md-6">
+		<div class="row">
+		  <a href="assets/images/romblon3.jpg"><img src="assets/images/romblon3.jpg" id="" class="img-fluid" alt="travel-3"></a>
+		</div>
+	</div>
+	<div class="col-md-6">	
+		<div class="row">  
+		  <a href="assets/images/romblon4.jpg"><img src="assets/images/romblon4.jpg" id="" class="img-fluid" alt="travel-4"></a>
+		</div>	
+	</div>
+</div><hr class="my-5">
+
+<div class="text-white">
+	<h1>BAGUIO PACKAGE</h1><br>
+</div>
+
+<div class="row"> 
+	<div class="col-md-6">
+		<div class="row">
+		  <a href="assets/images/baguio1.jpg"><img src="assets/images/baguio1.jpg" id="" class="img-fluid" alt="travel-1"></a>
+		</div>
+	</div>
+	<div class="col-md-6">	
+		<div class="row">  
+		  <a href="assets/images/baguio2.jpg"><img src="assets/images/baguio2.jpg" class="img-fluid" alt="travel-2"></a>
+		</div>	
+	</div>
+</div>
+
+<div class="row"> 
+	<div class="col-md-6">
+		<div class="row">
+		  <a href="assets/images/baguio3.jpg"><img src="assets/images/baguio3.jpg" id="" class="img-fluid" alt="travel-3"></a>
+		</div>
+	</div>
+	<div class="col-md-6">	
+		<div class="row">  
+		  <a href="assets/images/baguio4.jpg"><img src="assets/images/baguio4.jpg" id="" class="img-fluid" alt="travel-4"></a>
+		</div>	
+	</div>
 </div>
 
 </div> <!-- container -->
-
-<audio autoplay loop>
-    <source src="assets/withasmile.ogg">
-    <source src="assets/withasmile.mp3"> 
-</audio>
 
 <div class="footer-main">
 		<a href="https://jumeltagnipez.github.io/capstone1/portfolio.html"><small>jumeltagnipez|</small></a>
