--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
 <body>
 	
 <div class="port">
-<nav class="navbar navbar-dark bg-opacity sticky-top" class="row">
+<nav class="navbar navbar-light bg-opacity sticky-top" class="row">
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
     <!--<a class="navbar-brand text-white"><img src="assets/images/shoot2.png" height="30px" width="30px">Zooms++</a>-->
