--- a/landingpage.html
+++ b/landingpage.html
@@ -45,7 +45,7 @@
 </nav>
 
 <div class="section1">
-<img src="assets/images/click.png" height="410px" width="320">
+<img src="assets/images/click.png" height="410px" width="320px">
 </div>
 		
 <div class="section2 text-white"><h1>Click</h1>
