--- a/portfolio.html
+++ b/portfolio.html
@@ -37,14 +37,14 @@
 		        <a class="btn btn-outline-info toggle" href="portfolio.html">Home</a>		        
 		    </li>
 		    <li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="#portfolio">Portfolio</a>
+				<a class="btn btn-outline-info toggle" href="https:jumeltagnipez.github.io/capstone1/portfolio.html#portfolio">Portfolio</a>
 			</li>
-	      	<li class="ml-2 nav-item dropdown">
-				<a class="btn btn-outline-info toggle" href="#about">About</a>
+	      	<li class="ml-2 nav-item active">
+				<a class="btn btn-outline-info toggle" href="https:jumeltagnipez.github.io/capstone1/portfolio.html#about">About</a>
 				
 			</li>	      
-	      	<li class="ml-2 nav-item dropdown">
-				<a class="btn btn-outline-info toggle" href="#us">Contact</a>				
+	      	<li class="ml-2 nav-item active">
+				<a class="btn btn-outline-info toggle" href="https:jumeltagnipez.github.io/capstone1/portfolio.html#us">Contact</a>				
 			</li>      
 	    </ul>
     </div>
@@ -57,7 +57,7 @@
 <div class="row">
 	<div class="col-md-12">
 		<div class="row">
-		  <h1 class="display-1 testp"><a href="#portfolio"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">View My Portfolio</button></a></h1>
+		  <h1 class="display-1 testp"><a href="#about"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">About Me</button></a></h1>
 
 		</div>
 	</div>
@@ -65,7 +65,11 @@
 				
 <div class="row">
 	<div class="about" id="about"> 
+
+
 		<img src="assets/images/profile.jpg" class="profile">
+
+
 		<h1>Jumel D. Tagnipez</h1>
 		<h2> <em>Full-Stack Web Developer</em> </h2>
 
@@ -79,6 +83,7 @@
 			user-friendly platform.<br class="display-4">
 			
 			<a href="#portfolio"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">View My Portfolio</button></a>
+
 			</p>
 			<br class="display-1">
 			
