--- a/portfolio.html
+++ b/portfolio.html
@@ -37,14 +37,14 @@
 		        <a class="btn btn-outline-info toggle" href="portfolio.html">Home</a>		        
 		    </li>
 		    <li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="https:jumeltagnipez.github.io/capstone1/portfolio.html#portfolio">Portfolio</a>
+				<a class="btn btn-outline-info toggle" href="portfolio.html#portfolio" target="_blank">Portfolio</a>
 			</li>
 	      	<li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="https:jumeltagnipez.github.io/capstone1/portfolio.html#about">About</a>
+				<a class="btn btn-outline-info toggle" href="portfolio.html#about" target="_blank">About</a>
 				
 			</li>	      
 	      	<li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="https:jumeltagnipez.github.io/capstone1/portfolio.html#us">Contact</a>				
+				<a class="btn btn-outline-info toggle" href="portfolio.html#us" target="_blank">Contact</a>				
 			</li>      
 	    </ul>
     </div>
