--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<!--favicon generator-->
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+
 </head>
 
 <body>	
@@ -25,25 +26,26 @@
 <div class="index">
 <nav class="navbar navbar-dark bg-opacity sticky-top" class="row">
 
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
     <a class="navbar-brand text-white"><img src="assets/images/shoot2.png" height="30px" width="30px">Click</a>
     <span class="navbar-toggler-icon"></span>
     </button>
       
     <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
-    <div class="bg-opacity p-0">
+    <div class="bg-dark p-0">
         <ul class="navbar-nav">
         <li class="ml-2 nav-item active">
-            <a class="btn btn-outline-info toggle" href="landingpage.html">Home</a>           
+            <a class="btn btn-outline-light toggle" href="landingpage.html">Home</a>           
         </li>
           <li class="ml-2 nav-item active">
-        <a class="btn btn-outline-info toggle" href="index.html">Services</a>       
+        <a class="btn btn-outline-light toggle" href="index.html">Services</a>       
       </li> 
           <li class="ml-2 nav-item active">
-        <a class="btn btn-outline-info toggle" href="index.html#faq">FAQ&Prices</a>       
+        <a class="btn btn-outline-light toggle" href="index.html#faq" target="_blank">FAQ&Prices</a>       
       </li>       
           <li class="ml-2 nav-item active">
-        <a class="btn btn-outline-info toggle" href="index.html#support">Contact</a>        
+        <a class="btn btn-outline-light toggle" href="index.html#support" target="_blank">Contact</a>        
       </li>      
       </ul>
     </div>
@@ -84,7 +86,7 @@
 
 <hr>
 <div>
-	<h1>CAPSTONE 1: CLICK</h1><br>
+	<h1 class="animate bounceIn">CAPSTONE 1: CLICK</h1><br>
 </div>
 
 
@@ -161,7 +163,7 @@
           3. How much is the rate for wedding?
         </a>
       </div>
-      <div id="collapseThree" class="collapse" data-parent="#accordion">
+      <div id="collapseThree" class="collapse show" data-parent="#accordion">
         <div class="card-body">
           
   <strong>Option One</strong>
@@ -298,7 +300,7 @@ For out of Town Fees please refer to Travel Packages Section.
           10. How much is the price on your travel packages?
         </a>
       </div>
-      <div id="collapseTen" class="collapse" data-parent="#accordion">
+      <div id="collapseTen" class="collapse show" data-parent="#accordion">
         <div class="card-body">
         <strong>International:</strong><br>
 <del>Paris,France: PHP100,000</del><ins>Not Available for now</ins><br>
