--- a/landingpage.html
+++ b/landingpage.html
@@ -11,7 +11,8 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
 	<!--google fonts-->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Merienda|Open+Sans+Condensed:300" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Merienda" rel="stylesheet">
 	<!-- animate -->
 	<link rel="stylesheet" type="text/css" href="assets/css/animate.css">
 </head>
@@ -48,8 +49,8 @@
 <img src="assets/images/click.png" height="410px" width="320px">
 </div>
 		
-<div class="section2 text-white"><h1>Click</h1>
-	<h4>Services Limited<hr>
+<div class="section2 text-white animate bounceIn"><h1>Click</h1>
+	<h4 class="animate bounceIn">Services Limited<hr>
 	<a href="index.html">	
 	<button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Click Here</button></h4>
 	</a>
@@ -57,8 +58,8 @@
 <hr class="my-1">
 
 <audio autoplay loop>
-    <source src="assets/sound.ogg">
-    <source src="assets/sound.mp3"> 
+    <source src="assets/withasmile.ogg">
+    <source src="assets/withasmile.mp3"> 
 </audio>
 
 <div class="footer-main">
