--- a/travels.html
+++ b/travels.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-	<title>CLick</title>
+	<title>Click</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css"> 
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 	<!-- font awesome -->
@@ -20,33 +20,35 @@
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
-<body>
-<div class="photography">
+<body>	
+
+<div class="index">
 <nav class="navbar navbar-dark bg-opacity sticky-top" class="row">
+
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
     <a class="navbar-brand text-white"><img src="assets/images/shoot2.png" height="30px" width="30px">Click</a>
     <span class="navbar-toggler-icon"></span>
     </button>
-    	
-  	<div class="collapse navbar-collapse" id="navbarToggleExternalContent">
-    <div class="bg-opacity p-0">
-      	<ul class="navbar-nav">
-		    <li class="ml-2 nav-item active">
-		        <a class="btn btn-outline-info toggle" href="landingpage.html">Home</a>		        
-		    </li>
-	      	<li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="index.html">Services</a>				
-			</li> 
-	      	<li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="index.html#faq">FAQ&Prices</a>				
-			</li>	      
-	      	<li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="index.html#support">Contact</a>				
-			</li>      
-	    </ul>
+      
+    <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
+    <div class="bg-dark p-0">
+        <ul class="navbar-nav">
+        <li class="ml-2 nav-item active">
+            <a class="btn btn-outline-light toggle" href="landingpage.html">Home</a>           
+        </li>
+          <li class="ml-2 nav-item active">
+        <a class="btn btn-outline-light toggle" href="index.html">Services</a>       
+      </li> 
+          <li class="ml-2 nav-item active">
+        <a class="btn btn-outline-light toggle" href="index.html#faq" target="_blank">FAQ&Prices</a>       
+      </li>       
+          <li class="ml-2 nav-item active">
+        <a class="btn btn-outline-light toggle" href="index.html#support" target="_blank">Contact</a>        
+      </li>      
+      </ul>
     </div>
-  	</div>		
+    </div>    
 </nav>
 <div class="travels">
 
@@ -65,7 +67,7 @@
     <source src="assets/withasmile.mp3"> 
 </audio>	
 
-<div class="text-white" id="paris">
+<div class="text-white animate bounceIn" id="paris">
 	<h1>PARIS,FRANCE PACKAGE </h1><br>
 </div>
 
@@ -96,7 +98,7 @@
 	</div>
 </div><hr class="my-5">
 
-<div class="text-white">
+<div class="text-white animate bounceIn">
 	<h1>HONGKONG PACKAGE</h1><br>
 </div>
 
@@ -126,19 +128,19 @@
 	</div>
 </div><hr class="my-5">
 
-<div class="text-white">
+<div class="text-white animate bounceIn">
 	<h1>CEBU PACKAGE</h1><br>
 </div>
 
 <div class="row"> 
 	<div class="col-md-6">
 		<div class="row">
-		  <a href="assets/images/cebu1.jpg"><img src="assets/images/cebu1.jpg" id="" class="img-fluid" alt="travel-1"></a>
+		  <a href="assets/images/cebu1.jpg"><img src="assets/images/cebu1.jpg" id="" class="img-fluid" alt="travel-5"></a>
 		</div>
 	</div>
 	<div class="col-md-6">	
 		<div class="row">  
-		  <a href="assets/images/cebu2.jpg"><img src="assets/images/cebu2.jpg" class="img-fluid" alt="travel-2"></a>
+		  <a href="assets/images/cebu2.jpg"><img src="assets/images/cebu2.jpg" class="img-fluid" alt="travel-6"></a>
 		</div>	
 	</div>
 </div>
@@ -146,29 +148,29 @@
 <div class="row"> 
 	<div class="col-md-6">
 		<div class="row">
-		  <a href="assets/images/cebu3.jpg"><img src="assets/images/cebu3.jpg" id="" class="img-fluid" alt="travel-3"></a>
+		  <a href="assets/images/cebu3.jpg"><img src="assets/images/cebu3.jpg" id="" class="img-fluid" alt="travel-7"></a>
 		</div>
 	</div>
 	<div class="col-md-6">	
 		<div class="row">  
-		  <a href="assets/images/cebu4.jpg"><img src="assets/images/cebu4.jpg" id="" class="img-fluid" alt="travel-4"></a>
+		  <a href="assets/images/cebu4.jpg"><img src="assets/images/cebu4.jpg" id="" class="img-fluid" alt="travel-8"></a>
 		</div>	
 	</div>
 </div><hr class="my-5">
 
-<div class="text-white">
+<div class="text-white animate bounceIn">
 	<h1>ROMBLON PACKAGE</h1><br>
 </div>
 
 <div class="row"> 
 	<div class="col-md-6">
 		<div class="row">
-		  <a href="assets/images/romblon1.jpg"><img src="assets/images/romblon1.jpg" id="" class="img-fluid" alt="travel-1"></a>
+		  <a href="assets/images/romblon1.jpg"><img src="assets/images/romblon1.jpg" id="" class="img-fluid" alt="travel-9"></a>
 		</div>
 	</div>
 	<div class="col-md-6">	
 		<div class="row">  
-		  <a href="assets/images/romblon2.jpg"><img src="assets/images/romblon2.jpg" class="img-fluid" alt="travel-2"></a>
+		  <a href="assets/images/romblon2.jpg"><img src="assets/images/romblon2.jpg" class="img-fluid" alt="travel-10"></a>
 		</div>	
 	</div>
 </div>
@@ -176,29 +178,29 @@
 <div class="row"> 
 	<div class="col-md-6">
 		<div class="row">
-		  <a href="assets/images/romblon3.jpg"><img src="assets/images/romblon3.jpg" id="" class="img-fluid" alt="travel-3"></a>
+		  <a href="assets/images/romblon3.jpg"><img src="assets/images/romblon3.jpg" id="" class="img-fluid" alt="travel-11"></a>
 		</div>
 	</div>
 	<div class="col-md-6">	
 		<div class="row">  
-		  <a href="assets/images/romblon4.jpg"><img src="assets/images/romblon4.jpg" id="" class="img-fluid" alt="travel-4"></a>
+		  <a href="assets/images/romblon4.jpg"><img src="assets/images/romblon4.jpg" id="" class="img-fluid" alt="travel-12"></a>
 		</div>	
 	</div>
 </div><hr class="my-5">
 
-<div class="text-white">
+<div class="text-white animate bounceIn">
 	<h1>BAGUIO PACKAGE</h1><br>
 </div>
 
 <div class="row"> 
 	<div class="col-md-6">
 		<div class="row">
-		  <a href="assets/images/baguio1.jpg"><img src="assets/images/baguio1.jpg" id="" class="img-fluid" alt="travel-1"></a>
+		  <a href="assets/images/baguio1.jpg"><img src="assets/images/baguio1.jpg" id="" class="img-fluid" alt="travel-13"></a>
 		</div>
 	</div>
 	<div class="col-md-6">	
 		<div class="row">  
-		  <a href="assets/images/baguio2.jpg"><img src="assets/images/baguio2.jpg" class="img-fluid" alt="travel-2"></a>
+		  <a href="assets/images/baguio2.jpg"><img src="assets/images/baguio2.jpg" class="img-fluid" alt="travel-14"></a>
 		</div>	
 	</div>
 </div>
@@ -206,12 +208,12 @@
 <div class="row"> 
 	<div class="col-md-6">
 		<div class="row">
-		  <a href="assets/images/baguio3.jpg"><img src="assets/images/baguio3.jpg" id="" class="img-fluid" alt="travel-3"></a>
+		  <a href="assets/images/baguio3.jpg"><img src="assets/images/baguio3.jpg" id="" class="img-fluid" alt="travel-15"></a>
 		</div>
 	</div>
 	<div class="col-md-6">	
 		<div class="row">  
-		  <a href="assets/images/baguio4.jpg"><img src="assets/images/baguio4.jpg" id="" class="img-fluid" alt="travel-4"></a>
+		  <a href="assets/images/baguio4.jpg"><img src="assets/images/baguio4.jpg" id="" class="img-fluid" alt="travel-16"></a>
 		</div>	
 	</div>
 </div>
