--- a/photography.html
+++ b/photography.html
@@ -20,45 +20,36 @@
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
-<body>
+<body>	
 
-<div class="photography">
+<div class="index">
 <nav class="navbar navbar-dark bg-opacity sticky-top" class="row">
+
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
     <a class="navbar-brand text-white"><img src="assets/images/shoot2.png" height="30px" width="30px">Click</a>
     <span class="navbar-toggler-icon"></span>
     </button>
-    	
-  	<div class="collapse navbar-collapse" id="navbarToggleExternalContent">
-    <div class="bg-opacity p-0">
-      	<ul class="navbar-nav">
-		    <li class="ml-2 nav-item active">
-		        <a class="btn btn-outline-info toggle" href="landingpage.html">Home</a>		        
-		    </li>
-	      	<li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="index.html">Services</a>				
-			</li> 
-	      	<li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="index.html#faq">FAQ&Prices</a>				
-			</li>	      
-	      	<li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="index.html#support">Contact</a>				
-			</li>      
-	    </ul>
+      
+    <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
+    <div class="bg-dark p-0">
+        <ul class="navbar-nav">
+        <li class="ml-2 nav-item active">
+            <a class="btn btn-outline-light toggle" href="landingpage.html">Home</a>           
+        </li>
+          <li class="ml-2 nav-item active">
+        <a class="btn btn-outline-light toggle" href="index.html">Services</a>       
+      </li> 
+          <li class="ml-2 nav-item active">
+        <a class="btn btn-outline-light toggle" href="index.html#faq" target="_blank">FAQ&Prices</a>       
+      </li>       
+          <li class="ml-2 nav-item active">
+        <a class="btn btn-outline-light toggle" href="index.html#support" target="_blank">Contact</a>        
+      </li>      
+      </ul>
     </div>
-  	</div>		
+    </div>    
 </nav>
-
-<!--<div class="row">
-	<div class="col-md-12">
-		<div class="row">
-		  <h1 class="display-1 testp"><a href="#portfolio"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">View My Portfolio</button></a></h1>
-
-		</div>
-	</div>
-</div><hr class="my-5">-->
-			
 
 <div class="container-fluid">
 
@@ -75,7 +66,7 @@
     <source src="assets/withasmile.mp3"> 
 </audio>
 
-<h3 class="display-5 text-white" id="wedding">WEDDING EVENT</h3>
+<h3 class="display-5 text-white animate bounceIn" id="wedding">WEDDING EVENT</h3>
 <div class="row"> 
 	<div class="col-md-6">
 		<div class="row">
@@ -102,7 +93,7 @@
 	</div>
 </div><hr class="my-5">
 
-<h3 class="display-5 text-white">PRE-NUPT EVENT</h3>
+<h3 class="display-5 text-white animate bounceIn">PRE-NUPT EVENT</h3>
 <div class="row"> 
 	<div class="col-md-6">
 		<div class="row">
@@ -150,7 +141,7 @@
 	</div>
 </div><hr class="my-5">
 
-<div class="text-white">
+<div class="text-white animate bounceIn">
 	<h1 id="pic">PORTRAIT</h1><br class="display-5">
 </div>
 <div class="row">
@@ -165,7 +156,7 @@
 		</div>	
 	</div>
 </div><hr class="my-5">
-<div class="text-white">
+<div class="text-white animate bounceIn">
 	<h1>LANDSCAPE</h1><br class="display-5">
 </div>
 <div class="row">
@@ -180,7 +171,7 @@
 		</div>	
 	</div>
 </div><hr class="my-5">
-<div class="text-white">
+<div class="text-white animate bounceIn">
 	<h1>MACRO</h1><br class="display-5">
 </div>
 <div class="row">
