--- a/landingpage.html
+++ b/landingpage.html
@@ -29,16 +29,16 @@
     <div class="bg-opacity p-0">
       	<ul class="navbar-nav">
 		    <li class="ml-2 nav-item active">
-		        <a class="btn btn-outline-info toggle" href="landingpage.html">Home</a>		        
+		        <a class="btn btn-outline-light toggle" href="landingpage.html">Home</a>		        
 		    </li>
 	      	<li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="index.html">Services</a>				
+				<a class="btn btn-outline-light toggle" href="index.html">Services</a>				
 			</li> 
 	      	<li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="index.html#faq">FAQ&Prices</a>				
+				<a class="btn btn-outline-light toggle" href="index.html#faq">FAQ&Prices</a>				
 			</li>	      
 	      	<li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="index.html#support">Contact</a>				
+				<a class="btn btn-outline-light toggle" href="index.html#support">Contact</a>				
 			</li>      
 	    </ul>
     </div>
