--- a/portfolio.html
+++ b/portfolio.html
@@ -34,17 +34,17 @@
     <div class="bg-opacity p-0">
       	<ul class="navbar-nav">
 		    <li class="ml-2 nav-item active">
-		        <a class="btn btn-outline-light toggle" href="portfolio.html">Home</a>		        
+		        <a class="btn btn-outline-info toggle" href="portfolio.html">Home</a>		        
 		    </li>
 		    <li class="ml-2 nav-item active">
-				<a class="btn btn-outline-light toggle" href="portfolio.html#portfolio" target="_blank">Portfolio</a>
+				<a class="btn btn-outline-info toggle" href="portfolio.html#portfolio" target="_blank">Portfolio</a>
 			</li>
 	      	<li class="ml-2 nav-item active">
-				<a class="btn btn-outline-light toggle" href="portfolio.html#about" target="_blank">About</a>
+				<a class="btn btn-outline-info toggle" href="portfolio.html#about" target="_blank">About</a>
 				
 			</li>	      
 	      	<li class="ml-2 nav-item active">
-				<a class="btn btn-outline-light toggle" href="portfolio.html#us" target="_blank">Contact</a>				
+				<a class="btn btn-outline-info toggle" href="portfolio.html#us" target="_blank">Contact</a>				
 			</li>      
 	    </ul>
     </div>
