--- a/photography.html
+++ b/photography.html
@@ -22,7 +22,7 @@
 
 <body>	
 
-<div class="index">
+<div class="photography">
 <nav class="navbar navbar-dark bg-opacity sticky-top" class="row">
 
 
