--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="assets/images/roses.jpg" height="500px" alt="First slide">
+      <img class="d-block w-100" src="assets/images/carousel1.png" height="500px" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/travel3.jpg" height="500px" alt="Second slide">
+      <img class="d-block w-100" src="assets/images/carousel2.png" height="500px" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/paris001.jpg" height="500px" alt="Third slide">
+      <img class="d-block w-100" src="assets/images/carousel3.png" height="500px" alt="Third slide">
     </div>
 
   </div>
