--- a/portfolio.html
+++ b/portfolio.html
@@ -37,14 +37,14 @@
 		        <a class="btn btn-outline-info toggle" href="portfolio.html">Home</a>		        
 		    </li>
 		    <li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="portfolio.html#portfolio" target="_blank">Portfolio</a>
+				<a class="btn btn-outline-info toggle" href="port.html">Portfolio</a>
 			</li>
 	      	<li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="portfolio.html#about" target="_blank">About</a>
+				<a class="btn btn-outline-info toggle" href="about.html">About</a>
 				
 			</li>	      
 	      	<li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="portfolio.html#us" target="_blank">Contact</a>				
+				<a class="btn btn-outline-info toggle" href="contact.html">Contact</a>				
 			</li>      
 	    </ul>
     </div>
@@ -67,7 +67,7 @@
 	<div class="about" id="about"> 
 
 
-		<img src="assets/images/profile.jpg" class="profile">
+		<img src="assets/images/profile.jpg" class="profile bounceInLeft">
 
 
 		<h1>Jumel D. Tagnipez</h1>
