--- a/about.html
+++ b/about.html
@@ -11,8 +11,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
 	<!--google fonts-->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Dancing+Script|Shadows+Into+Light" rel="stylesheet">
 	<!-- animate -->
 	<link rel="stylesheet" type="text/css" href="assets/css/animate.css">
 		<!--favicon generator-->
@@ -74,6 +73,7 @@
 			As a Full-Stack Web Developer, his work includes providing advanced<br>
 			technical support, building websites and tools to provide a more<br>
 			user-friendly platform.<br class="display-4">
+
 			
 			<a href="#portfolio"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">View My Portfolio</button></a>
 
