--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,8 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
 	<!--google fonts-->
-	<link href="https://fonts.googleapis.com/css?family=Dancing+Script|Shadows+Into+Light" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 	<!-- animate -->
 	<link rel="stylesheet" type="text/css" href="assets/css/animate.css">
 		<!--favicon generator-->
@@ -36,14 +37,14 @@
 		        <a class="btn btn-outline-info toggle" href="portfolio.html">Home</a>		        
 		    </li>
 		    <li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="port.html">Portfolio</a>
+				<a class="btn btn-outline-info toggle" href="portfolio.html#portfolio" target="_blank">Portfolio</a>
 			</li>
 	      	<li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="about.html">About</a>
+				<a class="btn btn-outline-info toggle" href="portfolio.html#about" target="_blank">About</a>
 				
 			</li>	      
 	      	<li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="contact.html">Contact</a>				
+				<a class="btn btn-outline-info toggle" href="portfolio.html#us" target="_blank">Contact</a>				
 			</li>      
 	    </ul>
     </div>
@@ -56,7 +57,7 @@
 <div class="row">
 	<div class="col-md-12">
 		<div class="row">
-		  <h1 class="display-1 testp"><a href="#about"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Hello World</button></a></h1>
+		  <h1 class="display-1 testp"><a href="#about"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">About Me</button></a></h1>
 
 		</div>
 	</div>
@@ -66,7 +67,7 @@
 	<div class="about" id="about"> 
 
 
-		<img src="assets/images/profile.jpg" class="profile bounceInLeft">
+		<img src="assets/images/profile.jpg" class="profile">
 
 
 		<h1>Jumel D. Tagnipez</h1>
